updated color bug on mobile

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -173,7 +173,10 @@ body {
     font-size: 24px;
   }
   h3 {
-    font-size: 16px;
+    font-size: 20px;
+  }
+  a {
+    color: white !important;
   }
 }
 
